--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,14 +40,8 @@ dependencies:
   firebase_core: ^2.7.0
   flutter_form_builder: ^7.7.0
   chip_list: ^2.4.3+8
+  url_launcher: ^6.1.10
   
-  
-  
-  
-  googleapis_auth: ^1.3.1
-  googleapis: ^10.1.0
-  youtube_player_flutter: ^8.1.2
-  youtube_player_iframe: ^4.0.4
 
 dev_dependencies:
   flutter_test:
